# resilient-http

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tests.yml
examples/: httpx_async_example.py  simple_demo.py
resilient_http/: __init__.py  backoff.py  circuit_breaker.py  exceptions.py  httpx_async.py  metrics.py  resilient_async_client.py  resilient_session.py  retry_policy.py  retry_policy_async.py  session.py
tests/: test_async_manual.py  test_circuit.py  test_circuit_breaker_extra.py  test_http_errors.py  test_httpx_async.py  test_metrics_extra.py  test_metrics_extra2.py  test_resilient_session.py  test_retry.py  test_session_extra.py
