[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resilient-http"
version = "1.0.0"
description = "Resilience layer for Python HTTP clients (smart retries, jitter backoff, circuit breaker)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Plamen Nikolov" }]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "httpx>=0.27",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/pgnikolov/resilient-http"
Issues = "https://github.com/pgnikolov/resilient-http/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
    "build",
    "types-requests",
    "check-wheel-contents",
    "twine"
]

[tool.setuptools]
packages = { find = { include = ["resilient_http"], exclude = ["tests*", "examples*"] } }
include-package-data = true
